--- a/mall.css
+++ b/mall.css
@@ -1,10 +1,79 @@
-body{
-	background-color: #005500;
-	color: #FFFFFF;
-}
-a{
-	color: #BBBBBB;
-}
-a:visited{
-	color: #BBBBBB;
-}
+* {
+    box-sizing: border-box;
+  }
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: row;
+    margin: 0;
+  }
+  .col-1 {
+    background: #D7E8D4;
+
+  }
+  .col-2 {
+    display: flex;
+    flex-direction: column;
+    flex: 5;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+
+	footer {
+    display: flex;
+    flex-direction: row;
+	}
+
+	.f1 {
+		padding:10px;
+	}
+
+	nav {
+		padding: 0;
+		padding-top: 30px;
+	}
+	nav ul {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+	    width: 200px;
+      
+	}
+
+	nav li a {
+	    display: block;
+	    color: #000;
+	    padding: 8px 16px;
+	    text-decoration: none;
+	}
+	nav li a.active {
+    background-color: #4CAF50;
+    color: white;
+	}
+
+	nav li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+	}
+
+
+  header{
+		background: yellowgreen;
+		height: 20vh;
+	}
+	footer {
+    background: yellowgreen;
+    height: 20vh;
+		 width:100%;
+		position: absolute;
+		bottom: 0;
+  }
+  header, footer, article{
+    padding: 16px;
+  }
+
+	.login-form {
+		padding: 60px;
+	}
