--- a/mall.css
+++ b/mall.css
@@ -20,6 +20,14 @@
     display: flex;
     flex-direction: column;
   }
+.product {
+	background-color: #AAAAFF;
+	width: 200px;
+	height: 200px;
+	margin: 50px;
+	float: left;
+	text-align: center;
+  }
 
 	footer {
     display: flex;
