--- a/mall.css
+++ b/mall.css
@@ -19,20 +19,19 @@
   .content {
     display: flex;
     flex-direction: column;
+    min-height: calc(100vh - 200px);
   }
+  .product-list {
+  	margin: 20px;
+    }
+
 .product {
-	background-color: #AAAAFF;
-	width: 200px;
-	height: 200px;
+	width: 300px;
+	height: 300px;
 	margin: 50px;
 	float: left;
 	text-align: center;
   }
-
-	footer {
-    display: flex;
-    flex-direction: row;
-	}
 
 	.f1 {
 		padding:10px;
@@ -47,7 +46,7 @@
 	    margin: 0;
 	    padding: 0;
 	    width: 200px;
-      
+
 	}
 
 	nav li a {
@@ -69,13 +68,43 @@
 
   header{
 		background: yellowgreen;
-		height: 20vh;
+		height: 120px;
+    display: flex;
+    flex-direction: row;
 	}
+
+  .header-info{
+    position: absolute;
+    right: 60;
+    display: flex;
+    flex-direction: column;
+
+  }
+  .shopping-cart{
+    margin-top: 20px;
+  }
+
+  .shopping-cart a {
+  display: block;
+  text-decoration: none
+}
+
+  header h1 {
+    color: #ffffff;
+    font-family: 'Lato',sans-serif;
+    font-size: 54px;
+    font-weight: 300;
+    line-height: 58px;
+    margin: 0 0 58px;
+  }
+
+
 	footer {
     background: yellowgreen;
-    height: 20vh;
+    display: flex;
+    flex-direction: row;
+    height: 80px;
 		 width:100%;
-		position: absolute;
 		bottom: 0;
   }
   header, footer, article{
