Lot of small changes
Register fields, cart checkout form, css, validation

--- a/mall.css
+++ b/mall.css
@@ -32,6 +32,9 @@
 	float: left;
 	text-align: center;
   }
+.product img {
+  margin-bottom: 20px;
+}
 
 	.f1 {
 		padding:10px;
@@ -124,4 +127,5 @@
 
 	.login-form {
 		padding: 60px;
+
 	}
