--- a/mall.css
+++ b/mall.css
@@ -28,7 +28,8 @@
 .product {
 	width: 300px;
 	height: 300px;
-	margin: 50px;
+	margin: 0px;
+	margin-bottom: 100px;
 	float: left;
 	text-align: center;
   }
